Fix misbehavior in the "grow until darkest pixel" selection filter

BUG:475014